@@ -11,8 +11,6 @@ import java.util.Set;
 
 import org.bukkit.Material;
 
-import com.google.common.collect.ImmutableList;
-
 import world.bentobox.bentobox.api.configuration.ConfigComment;
 import world.bentobox.bentobox.api.configuration.ConfigEntry;
 import world.bentobox.bentobox.api.configuration.ConfigObject;
@@ -40,6 +38,11 @@ public class Settings implements ConfigObject {
     @ConfigComment("If there is no economy plugin present anyway, money will be automatically disabled.")
     @ConfigEntry(path = "general.use-economy")
     private boolean useEconomy = true;
+
+    @ConfigComment("Whether to charge the blueprint bundle cost when a player resets their island.")
+    @ConfigComment("If false, only island creation will charge the cost. Default is false.")
+    @ConfigEntry(path = "general.charge-for-blueprint-on-reset")
+    private boolean chargeForBlueprintOnReset = false;
 
     /* COMMANDS */
     @ConfigComment("Console commands to run when BentoBox has loaded all worlds and addons.")
@@ -379,6 +382,14 @@ public class Settings implements ConfigObject {
 
     public void setUseEconomy(boolean useEconomy) {
         this.useEconomy = useEconomy;
+    }
+
+    public boolean isChargeForBlueprintOnReset() {
+        return chargeForBlueprintOnReset;
+    }
+
+    public void setChargeForBlueprintOnReset(boolean chargeForBlueprintOnReset) {
+        this.chargeForBlueprintOnReset = chargeForBlueprintOnReset;
     }
 
     public DatabaseType getDatabaseType() {
@@ -1010,7 +1021,7 @@ public class Settings implements ConfigObject {
      * @return an immutable list of readyCommands
      */
     public List<String> getReadyCommands() {
-        return ImmutableList.copyOf(Objects.requireNonNullElse(readyCommands, Collections.emptyList()));
+        return List.copyOf(Objects.requireNonNullElse(readyCommands, Collections.emptyList()));
     }
 
     /**
